Fix scrollbar appears under "Weapon, gear and animation"

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,6 +177,7 @@
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
+    overflow-y: hidden;
     width: fit-content;
   }
   
